--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <p class="description">Hello fellow shoppers! We're currently building our new fashion store. 
         Add your email below to stay up-to-date with announcements and our launch deals.</p>
         <form action="#">
-          <input type="email" class="form-control" placeholder="Email Address">
-          <i class="icon hidden"></i>
-          <button type="submit" class="btn"></button>
+          <div class="wrapper">
+            <input type="email" class="form-control" placeholder="Email Address">
+            <i class="icon hidden"></i>
+            <button type="submit" class="btn"></button>
+          </div>
           <p class="validation-text hidden">Please provide a valid email</p>
         </form> 
         
